# strucdbg

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
examples/go-with-slog/: README.md  go.mod  main.go
examples/go-with-zap/: go.mod  main.go
examples/python-with-structlog/: pyproject.toml
examples/python-with-structlog/src/python_with_structlog/: main.py
src/: extension.ts
src/debugAdapter/: debugAdapterTracker.ts
src/debugAdapter/parsers/: defaultParser.ts  goParser.ts  logParser.ts  parserUtils.ts  pythonParser.ts
src/webview/: StrucdbgViewProvider.ts  SuperLogViewProvider.ts  strucdbgView.html  styles.css  superlogView.html  webview.js  windowManager.ts
