[project]
name = "python-with-structlog"
version = "1.0.0"
description = "Example showing use of Python with Structlog"
authors = [
    {name = "Gewad", email = "me@gerards.site"}
]
requires-python = ">=3.14"
dependencies = [
    "structlog (>=25.5.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
